# kapi-local-healthcare

./: .gitignore  README.md  download_models.py  main.py  pyproject.toml  server.py  start.py
.streamlit/: config.toml
AI_server/: llama_server.py
API/: depends.py
API/routers/: chat.py  knowledge.py  report.py  user.py
API/routers/web/: _auth.py  _constants.py  _pin.py  auth.py  chat.py  knowledge.py  profile.py  report.py  sessions.py  settings.py
API/schemas/: chat.py  user.py
Config/: settings.py
Domain/: chat.py  consultation.py  knowledge.py  user.py
Infrastructure/: initialization.py
Infrastructure/Agents/: agent.py  llm.py  prompt.py  workflow.py
Infrastructure/Knowledge/: chroma_repository.py
Repositories/: consultation_repository.py  knowledge_repository.py  user_repository.py
Use_cases/chat/: stream_chat.py
Use_cases/consultation/: save_consultation.py
Use_cases/knowledge/: add_document.py
Use_cases/report/: export_pdf.py
Use_cases/user/: create_user.py  delete_user.py  get_user.py  update_user.py
app/: api_client.py  auth.py  components.py  main.py  styles.py
app/views/: chat.py  knowledge.py  profile.py  report.py  settings.py
templates/: base.html
templates/auth/: _login_form.html  _register_step1.html  _register_step2.html  _register_step3.html  login.html
templates/chat/: _message.html  index.html
templates/knowledge/: index.html
templates/profile/: _form.html  _metrics.html  index.html
templates/report/: index.html
templates/sessions/: _history.html  index.html
templates/settings/: index.html
(+8 files in other folders)
